GNU grep NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

  grep now rejects a command like "grep -r pattern . > out",
  in which the output file is also one of the inputs,
  because it can result in an "infinite" disk-filling loop.
  [bug present since "the beginning"]


* Noteworthy changes in release 2.9 (2011-06-21) [stable]

** Bug fixes

  grep no longer clobbers heap for an ERE like '(^| )*( |$)'
  [bug introduced in grep-2.6]

  grep is faster on regular expressions that match multibyte characters
  in brackets (such as '[áéíóú]').

  echo c|grep '[c]' would fail for any c in 0x80..0xff, with a uni-byte
  encoding for which the byte-to-wide-char mapping is nontrivial.  For
  example, the ISO-88591 locales are not affected, but ru_RU.KOI8-R is.
  [bug introduced in grep-2.6]

  grep -P no longer aborts when PCRE's backtracking limit is exceeded
  Before, echo aaaaaaaaaaaaaab |grep -P '((a+)*)+$' would abort.  Now,
  it diagnoses the problem and exits with status 2.


* Noteworthy changes in release 2.8 (2011-05-13) [stable]

** Bug fixes

  echo c|grep '[c]' would fail for any c in 0x80..0xff, and in many locales.
  E.g., printf '\xff\n'|grep "$(printf '[\xff]')" || echo FAIL
  would print FAIL rather than the required matching line.
  [bug introduced in grep-2.6]

  grep's interpretation of range expression is now more consistent with
  that of other tools.  [bug present since multi-byte character set
  support was introduced in 2.5.2, though the steps needed to reproduce
  it changed in grep-2.6]

  grep erroneously returned with exit status 1 on some memory allocation
  failure. [bug present since "the beginning"]


* Noteworthy changes in release 2.7 (2010-09-16) [stable]

** Bug fixes

  grep --include=FILE works once again, rather than working like --exclude=FILE
  [bug introduced in grep-2.6]

  Searching with grep -Fw for an empty string would not match an